started css for header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
-		<nav class="main_menu">
+	<header class="main_header">
+		<nav class="main_nav">
 			<ul>
 				<li>Home</li>
 				<li>Bio</li>
@@ -24,8 +24,7 @@
 				<li>Contact</li>
 			</ul>
 		</nav>
-		<h1>Andrew Wysong Music</h1>
-
+		<h1 class="main_logo">Andrew Wysong Music</h1>
 	</header>
 
 
