--- a/index.html
+++ b/index.html
@@ -5,24 +5,37 @@
 	<meta charset="utf-8">
 	<Title>Home Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header class="main_header">
-		<nav class="main_nav">
-			<ul>
-				<li>Home</li>
-				<li>Bio</li>
-				<li id="sub_music_menu">Music</li>
-					<ul>
-						<li>Remixes</li>
-						<li>Original</li>
-						<li>TV + Film Music</li>
-						<li>Videos</li>	
-					</ul>	
-				<li>Contact</li>
-			</ul>
+		<nav>
+			<ul class="main_nav">
+				<!--<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#">Bio</a>
+				</li>-->
+				<li>
+					<a href="#">Music</a>
+						<ul class="sub_music_menu">
+							<li>
+								<a href="#">Remixes</a>
+							</li>
+							<li>
+								<a href="#">Original</a>
+							</li>
+							<li>
+								<a href="#">TV + Film Music</a>
+							</li>
+							<li>
+								<a href="#">Videos</a>
+							</li>	
+						</ul>
+				<!--</li>	
+				<li><a href="#">Contact</a></li>
+			</ul>-->
 		</nav>
 		<h1 class="main_logo">Andrew Wysong Music</h1>
 	</header>
