fixed white space and nav sub menu

--- a/index.html
+++ b/index.html
@@ -20,18 +20,10 @@
 				<li>
 					<a href="#">Music</a>
 						<ul class="sub_music_menu">
-							<li>
-								<a href="#">Remixes</a>
-							</li>
-							<li>
-								<a href="#">Original</a>
-							</li>
-							<li>
-								<a href="#">TV + Film Music</a>
-							</li>
-							<li>
-								<a href="#">Videos</a>
-							</li>	
+							<li><a href="#">Remixes</a></li>
+							<li><a href="#">Original</a></li>
+							<li><a href="#">TV + Film Music</a></li>
+							<li><a href="#">Videos</a></li>
 						</ul>
 				</li>	
 				<li><a href="#">Contact</a></li>
