created markup for index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,34 @@
 		</nav>
 		<h1 class="main_logo">Andrew Wysong Music</h1>
 	</header>
+	<div class="top_photo_border"></div>
+	<div class="index_image">
+		<img src>
+	</div>
+	<section class="site_links_row">
+		<section class="site_links_credit">
+			<h2>Credits</h2>
+				<img src="">
 
+		</section>
+		<section class="site_links_listen_to_tracks">
+			<h2>Listen to Tracks</h2>
+				<img src="">
 
+		</section>
+		<section class="site_links_contact">
+			<h2>Contact</h2>
+				<img src="">
+
+		</section>
+	</section>
+	<footer>
+		<div class="footer_text">
+			<p>Proudly Powered by WordPress</p>
+			<p>Wysong Music Theme</p>
+			<p>Copyright 2015</p>
+			<p>David A. Koch</p>
+		</div>
+	</footer>
 </body>
 </htmL>
