added bottom photo border

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<div class="index_image">
 		<img src>
 	</div>
+	<div class="bottom_photo_border"></div>
 	<section class="site_links_row">
 		<section class="site_links_credit">
 			<h2>Credits</h2>
