fixing up text in footer

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 	</section>
 	<footer>
 		<div class="footer_text">
-			<p>Proudly Powered by WordPress</p>
-			<p>Wysong Music Theme</p>
-			<p>Copyright 2015</p>
-			<p>David A. Koch</p>
+			<p class="Wordpress_logo">Proudly Powered by WordPress</p>
+			<div class="footer_text_right">
+				<p>Wysong Music Theme</p>
+				<p>Copyright 2015</p>
+				<p>David A. Koch</p>
+			</div>
 		</div>
 	</footer>
 </body>
