--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 
 		</section>
 	</section>
-	<footer>
-		<div class="footer_text">
-			<p class="Wordpress_logo">Proudly Powered by WordPress</p>
-			<div class="footer_text_right">
-				<p>Wysong Music Theme</p>
-				<p>Copyright 2015</p>
-				<p>David A. Koch</p>
-			</div>
+	<footer class="site_footer">
+		<div class="wordpress_text">
+			<p>Proudly Powered by WordPress</p>
+		</div>
+		<div class="footer_text_right">
+			<p>Wysong Music Theme</p>
+			<p>Copyright 2015</p>
+			<p>David A. Koch</p>
 		</div>
 	</footer>
 </body>
