--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		</section>
 	</section>
-	<footer class="site_footer">
+	<section class="site_footer">
 		<div class="wordpress_text">
 			<p>Proudly Powered by WordPress</p>
 		</div>
@@ -62,6 +62,6 @@
 			<p>Copyright 2015</p>
 			<p>David A. Koch</p>
 		</div>
-	</footer>
+	</section>
 </body>
 </htmL>
