added font awesome icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<Title>Home Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -29,7 +30,8 @@
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
-		<h1 class="main_logo">Andrew Wysong Music</h1>
+			<i class="fa fa-music fa-5x"></i>
+			<h1 class="main_logo">Andrew Wysong Music</h1>
 	</header>
 	<div class="top_photo_border"></div>
 	<div class="index_image">
