fixed up header nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<ul class="sub_music_menu">
 							<li><a href="#">Remixes</a></li>
 							<li><a href="#">Original</a></li>
-							<li><a href="#">TV + Film Music</a></li>
+							<li><a href="#">TV/Film</a></li>
 							<li><a href="#">Videos</a></li>
 						</ul>
 				</li>	
