finally fixed nav header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</header>
 	<div class="top_photo_border"></div>
 	<div class="index_image">
-		<img src="images/andrew_sepia.jpg">
+		<img src="images/andrew_pic.jpg">
 	</div>
 	<div class="bottom_photo_border"></div>
 	<section class="site_links_row">
