--- a/index.html
+++ b/index.html
@@ -55,13 +55,19 @@
 
 		</section>
 	</section>
+	<footer class="site_footer_950px">
+		<p>Proudly Powered by WordPress</p>
+		<p>Wysong Music Theme</p>
+		<p>@Copyright 2015</p>
+		<p>David A. Koch</p>
+	</footer>
 	<footer class="site_footer">
 		<div class="wordpress_text">
 			<p>Proudly Powered by WordPress</p>
 		</div>
 		<div class="footer_text_right">
 			<p>Wysong Music Theme</p>
-			<p>Copyright 2015</p>
+			<p>@Copyright 2015</p>
 			<p>David A. Koch</p>
 		</div>
 	</footer>
