added hamburger icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<header class="main_header">
 		<nav>
+			<div class="hamburger is-mobile js-menu"><i class="fa fa-bars fa-3x"></i></div>
 			<ul class="main_nav">
 				<li>
 					<a href="#">Home</a>
