switched main logo to right at 950px

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
-			<i class="fa fa-music fa-5x"></i>
+			<i class="note_logo fa fa-music fa-5x"></i>
 			<h1 class="main_logo">Andrew Wysong Music</h1>
 	</header>
 	<div class="top_photo_border"></div>
