created banner 700px nav

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
+
+			<!-- Creates the banner heading at 700px --> 
+		<nav>	
+			<ul class="banner_700px">
+				<li>menu</li>
+			</ul>
+		</nav>
+
+			<!--Handles the logp -->
 			<i class="note_logo fa fa-music fa-5x"></i>
 			<h1 class="main_logo">Andrew Wysong Music</h1>
 	</header>
