center text in banner 700px

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<!-- Creates the banner heading at 700px --> 
 		<nav>	
 			<ul class="banner_700px">
-				<li>menu</li>
+				<li>MENU</li>
 			</ul>
 		</nav>
 
