added html menu 700px

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
 				<li>MENU</li>
 			</ul>
 		</nav>
+			<!--creates the menu at 700px -->
+		<nav>
+			<ul class="menu_700px">
+				<li>Close</li>
+				<li>Home</li>
+				<li>Bio</li>
+				<li>Music/Remixes</li>
+				<li>Music/Original</li>
+				<li>Music/TV + Film</li>
+				<li>Music/Videos</li>
+				<li>Contact</li>
+			</ul>
+		</nav>
 
 			<!--Handles the logp -->
 			<i class="note_logo fa fa-music fa-5x"></i>
