set header logo to position absolute

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 			<!-- Creates the banner heading at 700px --> 
 		<nav>	
-			<ul class="banner_700px">
+			<ul class="banner_700px js_click_menu">
 				<li>MENU</li>
 			</ul>
 		</nav>
@@ -54,8 +54,10 @@
 		</nav>
 
 			<!--Handles the logp -->
+		<div class="header_logo">
 			<i class="note_logo fa fa-music fa-5x"></i>
 			<h1 class="main_logo">Andrew Wysong Music</h1>
+		</div>
 	</header>
 	<div class="top_photo_border"></div>
 	<div class="index_image">
