added jquery to make 700px menu appear

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 			<!-- Creates the banner heading at 700px --> 
 		<nav>	
-			<ul class="banner_700px js_click_menu">
-				<li>MENU</li>
+			<ul class="banner_700px">
+				<li class="js_click_menu">MENU</li>
 			</ul>
 		</nav>
 			<!--creates the menu at 700px -->
