created jquery to make 700px banner and 700 menu appear

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<!--creates the menu at 700px -->
 		<nav>
 			<ul class="menu_700px">
-				<li>Close</li>
+				<li class="js_click_banner">Close</li>
 				<li>Home</li>
 				<li>Bio</li>
 				<li>Music/Remixes</li>
