making site responsive at 675px

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 			<!--creates the menu at 700px -->
 		<nav>
 			<ul class="menu_700px">
-				<li class="js_click_banner">Close</li>
-				<li>Home</li>
-				<li>Bio</li>
-				<li>Music/Remixes</li>
-				<li>Music/Original</li>
-				<li>Music/TV + Film</li>
-				<li>Music/Videos</li>
-				<li>Contact</li>
+				<li class="js_click_banner">CLOSE</li>
+				<li>HOME</li>
+				<li>BIO</li>
+				<li>MUSIC/REMIXES</li>
+				<li>MUSIC/ORIGINAL</li>
+				<li>MUSIC/TV + FILM</li>
+				<li>MUSIC/VIDEOS</li>
+				<li>CONTACT</li>
 			</ul>
 		</nav>
 
@@ -81,6 +81,15 @@
 
 		</section>
 	</section>
+
+	<section class="site_links_list">
+		<li><img src="">Credits</li>
+		<li><img src="">Listen to Tracks</li>
+		<li><img src="">Contact</li>
+	</section>
+
+
+
 	<footer class="site_footer_950px">
 		<p>Proudly Powered by WordPress</p>
 		<p>Wysong Music Theme</p>
