--- a/index.html
+++ b/index.html
@@ -53,17 +53,23 @@
 			</ul>
 		</nav>
 
-			<!--Handles the logp -->
+			<!--Handles the logo -->
 		<div class="header_logo">
 			<i class="note_logo fa fa-music fa-5x"></i>
 			<h1 class="main_logo">Andrew Wysong Music</h1>
 		</div>
 	</header>
+
+	<!--beginning of individual page section-->
+
 	<div class="top_photo_border"></div>
 	<div class="index_image">
 		<img src="images/andrew_pic.jpg">
 	</div>
 	<div class="bottom_photo_border"></div>
+
+	<!--copy this section for each page-->
+
 	<section class="site_links_row">
 		<section class="site_links_credit">
 			<h2>Credits</h2>
