--- a/index.html
+++ b/index.html
@@ -11,106 +11,108 @@
 	<script src="scripts/main.js"></script>
 </head>
 <body>
-	<header class="main_header">
-		<nav>
-			<ul class="main_nav">
-				<li>
-					<a href="#">Home</a>
-				</li>
-				<li>
-					<a href="#">Bio</a>
-				</li>
-				<li>
-					<a href="#">Music</a>
-						<ul class="sub_music_menu">
-							<li><a href="#">Remixes</a></li>
-							<li><a href="#">Original</a></li>
-							<li><a href="#">TV/Film</a></li>
-							<li><a href="#">Videos</a></li>
-						</ul>
-				</li>	
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
+	<div class="container">
+		<header class="main_header">
+			<nav>
+				<ul class="main_nav">
+					<li>
+						<a href="#">Home</a>
+					</li>
+					<li>
+						<a href="#">Bio</a>
+					</li>
+					<li>
+						<a href="#">Music</a>
+							<ul class="sub_music_menu">
+								<li><a href="#">Remixes</a></li>
+								<li><a href="#">Original</a></li>
+								<li><a href="#">TV/Film</a></li>
+								<li><a href="#">Videos</a></li>
+							</ul>
+					</li>	
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
 
-			<!-- Creates the banner heading at 700px --> 
-		<nav>	
-			<ul class="banner_700px">
-				<li class="js_click_menu">MENU</li>
-			</ul>
-		</nav>
-			<!--creates the menu at 700px -->
-		<nav>
-			<ul class="menu_700px">
-				<li class="js_click_banner">CLOSE</li>
-				<li>HOME</li>
-				<li>BIO</li>
-				<li>MUSIC/REMIXES</li>
-				<li>MUSIC/ORIGINAL</li>
-				<li>MUSIC/TV + FILM</li>
-				<li>MUSIC/VIDEOS</li>
-				<li>CONTACT</li>
-			</ul>
-		</nav>
+				<!-- Creates the banner heading at 700px --> 
+			<nav>	
+				<ul class="banner_700px">
+					<li class="js_click_menu">MENU</li>
+				</ul>
+			</nav>
+				<!--creates the menu at 700px -->
+			<nav>
+				<ul class="menu_700px">
+					<li class="js_click_banner">CLOSE</li>
+					<li>HOME</li>
+					<li>BIO</li>
+					<li>MUSIC/REMIXES</li>
+					<li>MUSIC/ORIGINAL</li>
+					<li>MUSIC/TV + FILM</li>
+					<li>MUSIC/VIDEOS</li>
+					<li>CONTACT</li>
+				</ul>
+			</nav>
 
-			<!--Handles the logo -->
-		<div class="header_logo">
-			<i class="note_logo fa fa-music fa-5x"></i>
-			<h1 class="main_logo">Andrew Wysong Music</h1>
+				<!--Handles the logo -->
+			<div class="header_logo">
+				<i class="note_logo fa fa-music fa-5x"></i>
+				<h1 class="main_logo">Andrew Wysong Music</h1>
+			</div>
+		</header>
+
+		<!--beginning of individual page section-->
+
+		<div class="top_photo_border"></div>
+		<div class="index_image">
+			<img src="images/andrew_pic.jpg">
 		</div>
-	</header>
+		<div class="bottom_photo_border"></div>
 
-	<!--beginning of individual page section-->
+		<!--copy this section for each page-->
 
-	<div class="top_photo_border"></div>
-	<div class="index_image">
-		<img src="images/andrew_pic.jpg">
-	</div>
-	<div class="bottom_photo_border"></div>
+		<section class="site_links_row">
+			<section class="site_links_credit">
+				<h2>Credits</h2>
+					<img src="">
 
-	<!--copy this section for each page-->
+			</section>
+			<section class="site_links_listen_to_tracks">
+				<h2>Listen to Tracks</h2>
+					<img src="">
 
-	<section class="site_links_row">
-		<section class="site_links_credit">
-			<h2>Credits</h2>
-				<img src="">
+			</section>
+			<section class="site_links_contact">
+				<h2>Contact</h2>
+					<img src="">
 
+			</section>
 		</section>
-		<section class="site_links_listen_to_tracks">
-			<h2>Listen to Tracks</h2>
-				<img src="">
 
+		<section class="site_links_list">
+			<li><img src="">Credits</li>
+			<li><img src="">Listen to Tracks</li>
+			<li><img src="">Contact</li>
 		</section>
-		<section class="site_links_contact">
-			<h2>Contact</h2>
-				<img src="">
-
-		</section>
-	</section>
-
-	<section class="site_links_list">
-		<li><img src="">Credits</li>
-		<li><img src="">Listen to Tracks</li>
-		<li><img src="">Contact</li>
-	</section>
 
 
 
-	<footer class="site_footer_950px">
-		<p>Proudly Powered by WordPress</p>
-		<p>Wysong Music Theme</p>
-		<p>@Copyright 2015</p>
-		<p>David A. Koch</p>
-	</footer>
-	<footer class="site_footer">
-		<div class="wordpress_text">
+		<footer class="site_footer_950px">
 			<p>Proudly Powered by WordPress</p>
-		</div>
-		<div class="footer_text_right">
 			<p>Wysong Music Theme</p>
 			<p>@Copyright 2015</p>
 			<p>David A. Koch</p>
-		</div>
-	</footer>
+		</footer>
+		<footer class="site_footer">
+			<div class="wordpress_text">
+				<p>Proudly Powered by WordPress</p>
+			</div>
+			<div class="footer_text_right">
+				<p>Wysong Music Theme</p>
+				<p>@Copyright 2015</p>
+				<p>David A. Koch</p>
+			</div>
+		</footer>
+	</div>
 </body>
 </htmL>
