--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 		<div class="top_photo_border"></div>
 		<div class="index_image">
-			<img src="images/andrew_pic.jpg">
+			<img src="images/piano_keys3.jpg">
 		</div>
 		<div class="bottom_photo_border"></div>
 
@@ -78,7 +78,7 @@
 
 			</section>
 			<section class="site_links_listen_to_tracks">
-				<h2>Listen to Tracks</h2>
+				<h2>Listen</h2>
 					<img src="">
 
 			</section>
