--- a/musicTvfilm.html
+++ b/musicTvfilm.html
@@ -9,7 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="scripts/main.js"></script>
 </head>
-<body>
+<body class="music_color">
 	<div class="container">
 		<header class="main_header_music">
 			<nav>
