--- a/musicOriginal.html
+++ b/musicOriginal.html
@@ -61,7 +61,7 @@
 		</header>
 		<!--beginning of individual page section-->
 
-		<div class="top_photo_border"></div>
+		<div class="top_photo_border_music"></div>
 
 		<section class="music_body">
 			<p class="music_title">Originals</p>
