--- a/musicVideos.html
+++ b/musicVideos.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<header class="main_header_music">
 			<nav>
-				<ul class="main_nav">
+				<ul class="main_nav_music">
 					<li>
 						<a href="#">Home</a>
 					</li>
@@ -22,7 +22,7 @@
 					</li>
 					<li>
 						<a href="#">Music</a>
-							<ul class="sub_music_menu">
+							<ul class="sub_music_menu_music">
 								<li><a href="#">Remixes</a></li>
 								<li><a href="#">Original</a></li>
 								<li><a href="#">TV/Film</a></li>
