--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<!--Handles the logo -->
 			<div class="header_logo">
 				<i class="note_logo fa fa-music fa-5x"></i>
-				<h1 class="main_logo">Andrew Wysong Music</h1>
+				<h1 class="main_logo">Wysong Music</h1>
 			</div>
 		</header>
 
