got rid of music videos page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 							<ul class="sub_music_menu">
 								<li><a href="#">Originals</a></li>
 								<li><a href="#">TV/Film</a></li>
-								<li><a href="#">Videos</a></li>
 							</ul>
 					</li>	
 					<li><a href="#">Contact</a></li>
@@ -45,10 +44,8 @@
 					<li class="js_click_banner">CLOSE</li>
 					<li>HOME</li>
 					<li>BIO</li>
-					<li>MUSIC/REMIXES</li>
-					<li>MUSIC/ORIGINAL</li>
+					<li>MUSIC/ORIGINALS</li>
 					<li>MUSIC/TV + FILM</li>
-					<li>MUSIC/VIDEOS</li>
 					<li>CONTACT</li>
 				</ul>
 			</nav>
