added credits and changed music to listen

--- a/musicOriginal.html
+++ b/musicOriginal.html
@@ -21,12 +21,13 @@
 						<a href="#">Bio</a>
 					</li>
 					<li>
-						<a href="#">Music</a>
+						<a href="#">Listen</a>
 							<ul class="sub_music_menu_music">
 								<li><a href="#">Originals</a></li>
 								<li><a href="#">TV/Film</a></li>
 							</ul>
 					</li>	
+					<li><a href="#">Credits</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
@@ -43,8 +44,9 @@
 					<li class="js_click_banner">CLOSE</li>
 					<li>HOME</li>
 					<li>BIO</li>
-					<li>MUSIC/ORIGINAL</li>
-					<li>MUSIC/TV + FILM</li>
+					<li>LISTEN/ORIGINAL</li>
+					<li>LISTEN/TV + FILM</li>
+					<li>CREDITS</li>
 					<li>CONTACT</li>
 				</ul>
 			</nav>
@@ -52,7 +54,7 @@
 				<!--Handles the logo -->
 			<div class="header_logo">
 				<i class="note_logo fa fa-music fa-5x"></i>
-				<h1 class="main_logo">Andrew Wysong Music</h1>
+				<h1 class="main_logo">Wysong Music</h1>
 			</div>
 		</header>
 		<!--beginning of individual page section-->
