--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 						<a href="#">Bio</a>
 					</li>
 					<li>
-						<a href="#">Music</a>
+						<a href="#">Listen</a>
 							<ul class="sub_music_menu">
 								<li><a href="#">Originals</a></li>
 								<li><a href="#">TV/Film</a></li>
 							</ul>
 					</li>	
+					<li><a href="#">Credits</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
@@ -44,8 +45,9 @@
 					<li class="js_click_banner">CLOSE</li>
 					<li>HOME</li>
 					<li>BIO</li>
-					<li>MUSIC/ORIGINALS</li>
-					<li>MUSIC/TV + FILM</li>
+					<li>LISTEN/ORIGINALS</li>
+					<li>LISTEN/TV + FILM</li>
+					<li>CREDITS</li>
 					<li>CONTACT</li>
 				</ul>
 			</nav>
