--- a/musicTvfilm.html
+++ b/musicTvfilm.html
@@ -21,12 +21,13 @@
 						<a href="#">Bio</a>
 					</li>
 					<li>
-						<a href="#">Music</a>
+						<a href="#">Listen</a>
 							<ul class="sub_music_menu_music">
 								<li><a href="#">Originals</a></li>
 								<li><a href="#">TV/Film</a></li>
 							</ul>
 					</li>	
+					<li><a href="#">Credits</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
@@ -43,8 +44,9 @@
 					<li class="js_click_banner">CLOSE</li>
 					<li>HOME</li>
 					<li>BIO</li>
-					<li>MUSIC/ORIGINAL</li>
-					<li>MUSIC/TV + FILM</li>
+					<li>LISTEN/ORIGINAL</li>
+					<li>LISTEN/TV + FILM</li>
+					<li>CREDITS</li>
 					<li>CONTACT</li>
 				</ul>
 			</nav>
