added new photo to front page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<!--beginning of individual page section-->
 
 		<div class="index_image">
-			<img src="images/piano_keys3.jpg">
+			<img src="images/index_studio_image.jpg">
 		</div>
 
 		<!--copy this section for each page-->
