added active links for main nav

--- a/credits.html
+++ b/credits.html
@@ -29,7 +29,7 @@
 								<li><a href="#">TV/Film</a></li>
 							</ul>
 					</li>	
-					<li><a href="#">Credits</a></li>
+					<li class="active"><a href="#">Credits</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
