--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header class="main_header">
 			<nav>
 				<ul class="main_nav">
-					<li>
+					<li class="active">
 						<a href="#">Home</a>
 					</li>
 					<li>
