--- a/musicOriginal.html
+++ b/musicOriginal.html
@@ -20,7 +20,7 @@
 					<li>
 						<a href="#">Bio</a>
 					</li>
-					<li>
+					<li class="active">
 						<a href="#">Listen</a>
 							<ul class="sub_music_menu_music">
 								<li><a href="#">Originals</a></li>
