--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 							</ul>
 					</li>	
 					<li><a href="#">Credits</a></li>
-					<li><a href="#">Contact</a></li>
+					<li class="active"><a href="#">Contact</a></li>
 				</ul>
 			</nav>
 
