added links to main nav

--- a/musicOriginal.html
+++ b/musicOriginal.html
@@ -21,14 +21,14 @@
 						<a href="#">Bio</a>
 					</li>
 					<li class="active">
-						<a href="#">Listen</a>
+						<a>Listen</a>
 							<ul class="sub_music_menu_music">
-								<li><a href="#">Originals</a></li>
-								<li><a href="#">TV/Film</a></li>
+								<li><a>Originals</a></li>
+								<li><a href="musicTvfilm.html">TV/Film</a></li>
 							</ul>
 					</li>	
-					<li><a href="#">Credits</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="credits.html">Credits</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
