--- a/musicTvfilm.html
+++ b/musicTvfilm.html
@@ -15,20 +15,20 @@
 			<nav>
 				<ul class="main_nav_music">
 					<li>
-						<a href="#">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="#">Bio</a>
+						<a href="bio.html">Bio</a>
 					</li>
 					<li class="active">
-						<a href="#">Listen</a>
+						<a>Listen</a>
 							<ul class="sub_music_menu_music">
-								<li><a href="#">Originals</a></li>
-								<li><a href="#">TV/Film</a></li>
+								<li><a href="musicOriginal.html">Originals</a></li>
+								<li><a>TV/Film</a></li>
 							</ul>
 					</li>	
-					<li><a href="#">Credits</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="credits.html">Credits</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
