--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 			<nav>
 				<ul class="main_nav">
 					<li class="active">
-						<a href="#">Home</a>
+						<a>Home</a>
 					</li>
 					<li>
-						<a href="#">Bio</a>
+						<a href="bio.html">Bio</a>
 					</li>
 					<li>
-						<a href="#">Listen</a>
+						<a>Listen</a>
 							<ul class="sub_music_menu">
-								<li><a href="#">Originals</a></li>
-								<li><a href="#">TV/Film</a></li>
+								<li><a href="musicOriginal.html">Originals</a></li>
+								<li><a href="musicTvfilm.html">TV/Film</a></li>
 							</ul>
 					</li>	
-					<li><a href="#">Credits</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="credits.html">Credits</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
