--- a/musicOriginal.html
+++ b/musicOriginal.html
@@ -11,18 +11,18 @@
 </head>
 <body>
 	<div class="container">
-		<header class="main_header_music">
+		<header class="main_header">
 			<nav>
-				<ul class="main_nav_music">
+				<ul class="main_nav">
 					<li>
-						<a href="#">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="#">Bio</a>
+						<a href="bio.html">Bio</a>
 					</li>
 					<li class="active">
 						<a>Listen</a>
-							<ul class="sub_music_menu_music">
+							<ul class="sub_music_menu">
 								<li><a>Originals</a></li>
 								<li><a href="musicTvfilm.html">TV/Film</a></li>
 							</ul>
