fixed css and html for musicOriginal

--- a/musicOriginal.html
+++ b/musicOriginal.html
@@ -66,14 +66,16 @@
 
 		</section>	
 
+		<!--copy this section for each page-->
 
-		<footer class="site_footer_950px_music">
+		<footer class="site_footer_950px">
 			<p>Proudly Powered by WordPress</p>
 			<p>Wysong Music Theme</p>
 			<p>@Copyright 2015</p>
 			<p>David A. Koch</p>
 		</footer>
-		<footer class="site_footer_music">
+
+		<footer class="site_footer">
 			<div class="wordpress_text">
 				<p>Proudly Powered by WordPress</p>
 			</div>
