--- a/musicTvfilm.html
+++ b/musicTvfilm.html
@@ -9,11 +9,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="scripts/main.js"></script>
 </head>
-<body class="music_color">
+<body>
 	<div class="container">
-		<header class="main_header_music">
+		<header class="main_header">
 			<nav>
-				<ul class="main_nav_music">
+				<ul class="main_nav">
 					<li>
 						<a href="index.html">Home</a>
 					</li>
@@ -22,7 +22,7 @@
 					</li>
 					<li class="active">
 						<a>Listen</a>
-							<ul class="sub_music_menu_music">
+							<ul class="sub_music_menu">
 								<li><a href="musicOriginal.html">Originals</a></li>
 								<li><a>TV/Film</a></li>
 							</ul>
@@ -60,19 +60,20 @@
 		<!--beginning of individual page section-->
 
 		<section class="music_body">
-			<p class="music_title">TV + Film</p>
+			<p class="music_title">TV/Film</p>
 
 
 		</section>	
 
+	<!--copy this section for each page-->
 
-		<footer class="site_footer_950px_music">
+		<footer class="site_footer_950px">
 			<p>Proudly Powered by WordPress</p>
 			<p>Wysong Music Theme</p>
 			<p>@Copyright 2015</p>
 			<p>David A. Koch</p>
 		</footer>
-		<footer class="site_footer_music">
+		<footer class="site_footer">
 			<div class="wordpress_text">
 				<p>Proudly Powered by WordPress</p>
 			</div>
