updated credits page

--- a/credits.html
+++ b/credits.html
@@ -61,16 +61,8 @@
 		</header>
 		<!--beginning of individual page section-->
 		<p class="music_title">Production Credits</p>
-			<li>Artist</li>
-				<ul>
-					<li>Bex - What You Are (Original Pop Mix) - Symabosonic Records - Programming, Guitars, Keyboards, Drums, Engineer</li>	
-					<li>- Katrina - Ready to Love (Vic Latino Mix) - Red Red Records - Programming, Engineer, Mixing, Keyboards, Guitar</li>
-					<li>- Candyman 187 Ft. Snoop Dogg - High Off The Fame (Beat Bangerzz Remix) - We Got The Juice LLC - Programming, Engineer, Keyboards</li>
-					<li>- Kaitlin Corbett Jones - Perfection (Beat Bangerzz Dub) - Integrity Productions - Engineer, Programming, Keyboards</li>
-					<li>- Brett Cohen - Hotter Than Fire - Global Groove - Guitar</li>
-					<li>- AnitaFerrer - Lifetime Prayer - Producer, Engineer, Guitars, Keyboards, Drum Programming, Mixing, Mastering</li>
-					<li>- Pete Thorn - Halloween: Icons Of the Underground Vol. 1: Glen Danzig - Hedonism Records - Engineer, Drums</li>
-				</ul>
+
+		<!--copy this section for each page-->
 
 		<footer class="site_footer_950px">
 			<p>Proudly Powered by WordPress</p>
