fixed up contact page

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 							</ul>
 					</li>	
 					<li><a href="credits.html">Credits</a></li>
-					<li class="active">Contact</a></li>
+					<li class="active"><a>Contact</a></li>
 				</ul>
 			</nav>
 
@@ -59,13 +59,9 @@
 		</header>
 		<!--beginning of individual page section-->
 
-		<div class="top_photo_border"></div>
+		<p class="music_title">Contact</p>
 
-		<section class="contact_body">
-
-
-		</section>	
-
+		<!--copy this section for each page-->
 
 		<footer class="site_footer_950px">
 			<p>Proudly Powered by WordPress</p>
