removed most media query except 950px footer and 700px banner and menu

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 				<!--Handles the logo -->
 			<div class="header_logo">
 				<i class="note_logo fa fa-music fa-5x"></i>
-				<h1 class="main_logo">Andrew Wysong Music</h1>
+				<h1 class="main_logo">Wysong Music</h1>
 			</div>
 		</header>
 		<!--beginning of individual page section-->
