--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 			<nav>
 				<ul class="menu_700px">
 					<li class="js_click_banner">CLOSE</li>
-					<li>HOME</li>
-					<li>BIO</li>
-					<li>LISTEN/ORIGINALS</li>
-					<li>LISTEN/TV + FILM</li>
-					<li>CREDITS</li>
-					<li>CONTACT</li>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="bio.html"BIO</a></li>
+					<li><a href="musicOriginal.html">LISTEN/ORIGINALS</a></li>
+					<li><a href="musicTvfilm.html">LISTEN/TV + FILM</a></li>
+					<li><a href="credits.html">CREDITS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 			</nav>
 
